--- a/main.css
+++ b/main.css
@@ -77,7 +77,19 @@
 }
 input {
     width: 20vw;
+    height: 20px;
+    border: solid 1px black;
+    text-align: center;
+    border-radius: 10px;
 }
 button {
     width: 20vw;
+    height: 50px;
+    border-radius: 10px;
+    @media all and (min-width: 768px) {
+        width: 20vw;
+        height: 20px;
+        border-radius: 10px;
+        
+    }
 }
