--- a/main.css
+++ b/main.css
@@ -42,7 +42,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px; 
+    
+@media all and (min-width: 768px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 10px;
+        
+    }
 }
 
 .fieldsetCuadrado {
@@ -51,9 +58,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50vw;
+    width: 60vw;
     gap: 10px;
     background-color: #F2A541;
+    @media all and (min-width: 768px) {
+    width: 40vw;
+    }
 }
 .fieldsetTriangulo {
     border-color: orange;
@@ -61,9 +71,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50vw;
+    width: 60vw;
     gap: 10px;
     background-color: #F2A541;
+    @media all and (min-width: 768px) {
+        width: 40vw;
+        }
 }
 .fieldsetCirculo {
     border-color: orange;
@@ -71,9 +84,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50vw;
+    width: 60vw;
     gap: 10px;
     background-color: #F2A541;
+    @media all and (min-width: 768px) {
+        width: 40vw;
+        }
 }
 label {
     margin-top: 10px;
@@ -82,8 +98,14 @@ label {
     gap: 20px;
 }
 .reset {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 40px;
+    margin-right: 10px;
+
+    @media all and (min-width: 768px) {
+        width: 30px;
+        height: 30px;
+        }
 }
 input {
     width: 20vw;
@@ -122,5 +144,5 @@ button {
     padding: 5px;
     font-family: 'Oswald', sans-serif;
     border-radius: 10px;
-    
+
 }
